tests/snapshots/files__print_function_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (R 1 2)
   (R 2 3)
   (R 3 4)
   (R 5 6)
)
(
   (R 1 2)
   (R 2 3)
   (R 3 4)
)
(
   (G (F 1) "1") -> 1
   (G (F 2) "2") -> 2
   (G (F 3) "3") -> 3
   (G (F 4) "4") -> 4
)
(
   (G (F 1) "1") -> 1
   (G (F 2) "2") -> 2
   (G (F 3) "3") -> 3
)
