tests/snapshots/files__proof_supported_files.snap
---
source: tests/files.rs
expression: snapshot
---
bitwise.egg
calc.egg
combined-nested.egg
complex-merge-func.egg
f64.egg
fail-typecheck/ungrounded-0.egg
fail-typecheck/ungrounded-1.egg
fail-typecheck/ungrounded-2.egg
fail_wrong_assertion.egg
fibonacci-demand.egg
i64.egg
include.egg
integer_math.egg
intersection.egg
interval.egg
math-microbenchmark.egg
merge-during-rebuild.egg
merge-saturates.egg
name-resolution.egg
primitives.egg
proofs/bind-prim-result.egg
proofs/commute-collapse.egg
proofs/global-prove-query.egg
proofs/primitive-args.egg
proofs/simple_proof_check.egg
repro-define.egg
repro-empty-query.egg
repro-equal-constant.egg
repro-equal-constant2.egg
repro-new-backend-delete.egg
repro-new-backend-prims.egg
repro-noteqbug.egg
repro-primitive-query.egg
repro-push-pop-global.egg
repro-querybug.egg
repro-querybug2.egg
repro-querybug4.egg
repro-should-saturate.egg
repro-silly-panic.egg
repro-typechecking-schedule.egg
repro-unsound-htutorial.egg
stratified.egg
string.egg
subsume-relation.egg
test-combined-steps.egg
test-combined.egg
until.egg
web-demo/antiunify.egg
web-demo/birewrite.egg
web-demo/combinators.egg
web-demo/eqsat-basic.egg
web-demo/eqsolve.egg
web-demo/math.egg
web-demo/matrix.egg
web-demo/naturals.egg
web-demo/path-union.egg
web-demo/path.egg
web-demo/pathproof.egg
web-demo/points-to.egg
web-demo/push-pop.egg
web-demo/resolution.egg
web-demo/rw-analysis.egg
web-demo/schedule-demo.egg
web-demo/subsume.egg
web-demo/towers-of-hanoi.egg
web-demo/typecheck.egg
web-demo/unification-points-to.egg
web-demo/unify.egg
