tests/snapshots/files__proof_unsupported_files.snap
---
source: tests/files.rs
expression: snapshot
---
array.egg
bdd.egg
before-proofs.egg
bignum.egg
bool.egg
complex-merge-prim.egg
container-before-table-rebuild.egg
container-dirty-after-table-rebuild.egg
container-fail.egg
container-rebuild.egg
cyk.egg
cykjson.egg
delete.egg
eggcc-2mm.egg
eggcc-extraction.egg
eqsat-basic-multiset.egg
extract-vec-bench.egg
factoring-multisets.egg
fibonacci.egg
fusion.egg
hardboiled_conv1d_128.egg
hardboiled_conv1d_32.egg
herbie-tutorial.egg
herbie.egg
interval.egg
knapsack.egg
lambda.egg
levenshtein-distance.egg
list.egg
looking_up_global.egg
looking_up_nonconstructor_in_rewrite_good.egg
luminal-llama.egg
map.egg
math.egg
merge_read.egg
multiset.egg
naive-action-lookup.egg
pair.egg
prims.egg
print-function.egg
python_array_optimize.egg
rat-pow-eval.egg
repro-738-fn-sort.egg
repro-desugar-143.egg
repro-herbie-vanilla.egg
repro-new-backend-python-vec.egg
repro-unsound.egg
repro-vec-unequal.egg
set.egg
set_sort_function.egg
stresstest_large_expr.egg
string_quotes.egg
taylor51.egg
towers-of-hanoi.egg
tricky-type-checking.egg
typed_primitive_unstable_app.egg
typeinfer.egg
uf-extraction.egg
unsafe-seminaive-read-prim.egg
unsafe-seminaive.egg
unstable-fn.egg
vec.egg
