tests/snapshots/files__repro_define.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  Zero-0:
    op: Zero
    children: []
    eclass: "0"
    cost: 9223372036854776000
  S-0:
    op: S
    children:
      - Zero-0
    eclass: "1"
    cost: 1
  S-5871781006564002453:
    op: S
    children:
      - S-0
    eclass: "2"
    cost: 1
  S-11743562013128004906:
    op: S
    children:
      - S-5871781006564002453
    eclass: "2"
    cost: 1
  two-0:
    op: two
    children: []
    eclass: "2"
    cost: 9223372036854776000
root_eclasses: []
class_data:
  "0":
    type: Nat
  "1":
    type: Nat
  "2":
    type: Nat

