tests/snapshots/files__repro_desugar_143.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (f 0) -> 0
   (f 1) -> 1
   (f 2) -> 2
   (f 3) -> 3
   (f 4) -> 4
   (f 5) -> 5
   (f 6) -> 6
   (f 7) -> 7
   (f 8) -> 8
   (f 9) -> 9
   (f 10) -> 10
   (f 11) -> 11
   (f 12) -> 12
   (f 13) -> 13
   (f 14) -> 14
   (f 15) -> 15
   (f 16) -> 16
   (f 17) -> 17
   (f 18) -> 18
   (f 19) -> 19
   (f 20) -> 20
)
(
   (fib (Num 1)) -> (Num 1)
   (fib (Num 2)) -> (Num 1)
   (fib (Num 3)) -> (Num 2)
   (fib (Num 4)) -> (Num 3)
   (fib (Num 5)) -> (Num 5)
   (fib (Num 6)) -> (Num 8)
   (fib (Num 7)) -> (Num 13)
   (fib (Num 8)) -> (Num 21)
   (fib (Num 9)) -> (Num 34)
   (fib (Num 10)) -> (Num 55)
   (fib (Num 11)) -> (Num 89)
   (fib (Num 12)) -> (Num 144)
   (fib (Num 13)) -> (Num 233)
   (fib (Num 14)) -> (Num 377)
   (fib (Num 15)) -> (Num 610)
   (fib (Num 16)) -> (Num 987)
   (fib (Num 17)) -> (Num 1597)
   (fib (Num 18)) -> (Num 2584)
   (fib (Num 19)) -> (Num 4181)
   (fib (Num 20)) -> (Num 6765)
   (fib (Num 21)) -> (Num 10946)
   (fib (Num 22)) -> (Num 17711)
)
