tests/snapshots/files__repro_equal_constant2_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Rule
      (= (foo 4) (foo 4))
      (name
        "(rule ((= (foo ) 10))
      ((set (foo) 4))
         )")
      (premises (Fiat (= (foo 10) (foo 10))) (Fiat (= 10 10)))
      (substitution (@n 10)))
    (Fiat (= 4 4)))
  (substitution (@n1 4)))
